--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jspdf": "^4.0.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
     "recharts": "^3.7.0",
     "tailwindcss": "^4.1.18"
